tests/eval/bad/string_error2.scilexp
let x = 0x11 in
builtin to_ascii x
